compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-40.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\U10F029Y\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        Assign@(FileId(1), 0..16): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..16): String("\u{10f029}Y")

