compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-47.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"^"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        Assign@(FileId(1), 0..7)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..7): String("")
error in file FileId(1) at 5..7: invalid string literal: missing terminator character
error in file FileId(1) at 6..7: invalid string literal: unknown caret escape

