compiler/toc_hir_lowering/tests/snapshots/lowering__lower_char_seq_escapes-49.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := \"\\777\""

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..11): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..11): []
        Assign@(FileId(1), 0..11)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..11): String("�")
error in file FileId(1) at 5..11: invalid string literal
| error in file FileId(1) for 6..10: octal character value is greater than \377 (decimal 255)

